# lbmbench

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compilers-example.json  lbm-schema.json  make-user-presets.py  pyproject.toml  run-user-workflows.py  sanitizing-cache.cmake
.github/workflows/: cmake-multi-platform.yml
cmake/: lbmbench_deps.cmake
cxx/: CMakeLists.txt  main.cpp
cxx/lbm/: config.hpp.in  exceptions.hpp  utility.hpp
cxx/lbm/D2Q9/: Cell.hpp  Grid.hpp  Inlet.hpp  Node.hpp  Outlet.hpp  Periodic.hpp  State.hpp  Symmetry.hpp  Velocity_Distribution.hpp  Wall.hpp  import.hpp
cxx/lbm/app/: Driver.cpp  Driver.hpp  Driver_Impl.cpp  Driver_Impl.hpp  Exception_Handler.hpp  Runtime_Config.cpp  Runtime_Config.hpp  Runtime_Config_Impl.cpp  Runtime_Config_Impl.hpp  import.hpp
cxx/lbm/core/: Array.hpp  Array2.hpp  Boundary_Condition.cpp  Boundary_Condition.hpp  Boundary_ID.cpp  Boundary_ID.hpp  Bounding_Box.cpp  Bounding_Box.hpp  D2Q9.hpp  Dynamic_Array.hpp  Euclidean.cpp  Euclidean.hpp  Expression.cpp  Expression.hpp  Fixed_Array.hpp  Fixed_Array_Index.hpp  Fixed_Euclidean.hpp  Fixed_Lexical.hpp  Float_Type.cpp  Float_Type.hpp  IState.hpp  I_State.hpp  Index.hpp  Initial_Conditions.hpp  Input.cpp  Input.hpp  JSON_Convertible.hpp  Kernel.cpp  Kernel.hpp  Lattice.cpp  Lattice.hpp  Lexical.hpp  Obstacle.hpp  Scalar_Quantity.hpp  Shape.hpp  Vector.hpp  base_types.hpp  forall.hpp  import.hpp  misc.hpp  (+2 more)
cxx/lbm/exceptions/: Bad_Config_Path.hpp  Bad_Float_Type.hpp  Bad_Input.hpp  Bad_Kernel_Name.hpp  Bad_Usage.hpp  Help_Request.hpp  Unreachable.hpp  Version_Request.hpp  import.hpp
cxx/lbmbench/: Array.hpp  Array_Index.hpp  D2Q9.hpp  Lexical.hpp  Order_Type.hpp  base_types.hpp  mdarray.hpp  utility.hpp
cxx/lbmbench/details/: Array.hpp  Boundary_Condition.hpp  Boundary_ID.hpp  Bounding_Box.cpp  Bounding_Box.hpp  D2Q9.hpp  D2_Lattice.cpp  Euclidean.cpp  Euclidean.hpp  Expression.cpp  Expression.hpp  Fixed_Array.hpp  Fixed_Array_Index.hpp  Fixed_Lexical.hpp  Index.hpp  Initial_Conditions.hpp  Input.hpp  JSON_Convertible.hpp  Lattice.cpp  Lattice.hpp  Lexical.hpp  Obstacle.hpp  Shape.hpp  Vector.hpp  base_types.hpp  import.hpp  misc.hpp
examples/cxx/: CMakeLists.txt  dem_reader.cpp  image_data_geometry_filter.cpp  image_map_to_colors.cpp  image_mask.cpp
lbmbench/: CMakeLists.txt  config.hpp.in
lbmbench_testing/: CMakeLists.txt
scripts/: check-format.sh  clang-format-env.sh
test/: CMakeLists.txt
test/cxx/: CMakeLists.txt  D2Q9_array2_test.cpp  D2Q9_cell_test.cpp  D2Q9_grid_test.cpp  D2Q9_node_test.cpp  D2Q9_state_test.cpp  D2Q9_test.cpp  D2Q9_velocity_distribution_test.cpp  D2Q9_wall_test.cpp  array2_test.cpp  array_test.cpp  boundary_condition_test.cpp  boundary_id_test.cpp  bounding_box_test.cpp  euclidean_test.cpp  expression_test.cpp  fixed_array_index_test.cpp  fixed_array_order_test.cpp  fixed_array_test.cpp  fixed_euclidean_test.cpp  index_test.cpp  initial_conditions_test.cpp  input_test.cpp  lattice_test.cpp  lexical_test.cpp  obstacles_test.cpp  runtime_config_test.cpp  scalar_quantity_test.cpp  shape_test.cpp  vector_test.cpp
test/data/: invalid-input.json  valid-input.json
