[tool.poetry]
name = "lbmbench"
version = "0.1.0"
description = "Benchmarks for Lattice Boltzmann"
authors = ["Samuel B. Johnson <sabjohnso@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
