[tool.poetry]
name = "lbmbench"
version = "0.1.0"
description = "Benchmarks for Lattice Boltzmann"
authors = ["Samuel B. Johnson <sabjohnso@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
jsonschema = "^4.22.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
